--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,164 @@
+#searchForm {
+  text-align: center;
+  margin: auto;
+}
 
+.search-btn {
+  padding: 10px 20px;
+  background-color: wheat;
+  color: rgb(15, 7, 7);
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin: 4px;
+  height: 37px;
+  font-family: "Marcellus SC", serif;
+  font-weight: 600;
+}
+
+.clear-btn {
+  padding: 10px 20px;
+  color: rgb(8, 8, 8);
+  border-radius: 20px;
+  cursor: pointer;
+  margin: 4px;
+  height: 37px;
+  border: none;
+  font-family: "Marcellus SC", serif;
+  font-weight: 500;
+  background: rgb(240, 210, 240);
+  border: 1px solid white;
+  box-shadow: 0px 2px 0 white, 2px 4px 6px #eee;
+  letter-spacing: 1px;
+  -webkit-transition: all 150ms linear;
+  transition: all 150ms linear;
+}
+
+.clear-btn:hover {
+  background: #eebeea;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  box-shadow: 1px 1px 2px rgba(255, 255, 255, 0.2);
+  color: #f80858;
+  text-decoration: none;
+  text-shadow: -1px -1px 0 #6b4f74;
+  -webkit-transition: all 250ms linear;
+  transition: all 250ms linear;
+}
+
+#container {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+nav {
+  background-color: rgb(7, 6, 6);
+  color: antiquewhite;
+  padding: 25px;
+  display: flex;
+  justify-content: space-between;
+  background-image: url("https://www.shutterstock.com/image-photo/bartender-work-desk-equipment-cocktail-600nw-1610241322.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.nav-data {
+  display: flex;
+  cursor: pointer;
+  padding: 10px;
+  gap: 4px;
+}
+
+h1 {
+  color: var(--color-prymary);
+  font-family: "Slackey", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  /* font-size: 2.5rem; */
+  font-size: 350%;
+}
+
+h2 {
+  margin: 5px;
+  font-size: medium;
+  font-family: "Marcellus SC", serif;
+  margin: auto;
+}
+
+.btn-nav {
+  padding: 10px 20px;
+  background-color: var(--color-prymary);
+  border: none;
+  border-radius: 10px;
+  margin-top: 15px;
+  cursor: pointer;
+  color: #0a0a0a;
+  font-family: var(--texto-secundary);
+  font-weight: 600;
+}
+
+.btn-nav:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(255, 255, 255, 0.5), 0 0 20px rgba(255, 255, 255, 0.2);
+  outline-offset: 15px;
+  outline-color: rgba(255, 255, 255, 0);
+  text-shadow: 1px 1px 2px #884273;
+}
+
+#main {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: #0a0a0a;
+}
+
+.main-conainer {
+  gap: 20px;
+  overflow-y: auto;
+  margin: auto;
+}
+
+.card {
+  border-radius: 8px;
+  margin: 10px;
+  padding: 10px;
+  display: inline-block;
+  width: calc(30% - 20px);
+  text-align: center;
+  background: #f8f8f8;
+  border: solid #bdbdbd 1px;
+  box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+  filter: alpha(opacity=70);
+}
+
+.card_img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 8px;
+}
+
+.card_title {
+  margin: 10px 0;
+}
+
+.view_detail_btn {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-family: "Marcellus SC", serif;
+  color: #0a0a0a;
+  font-weight: 600;
+}
+
+.view_detail_btn:hover {
+  border: 1px solid;
+  box-shadow: inset 0 0 20px rgba(253, 25, 234, 0.822), 0 0 20px rgba(216, 89, 199, 0.178);
+  outline-offset: 15px;
+  outline-color: rgba(255, 255, 255, 0);
+  text-shadow: 1px 1px 2px #f1addd;
+}
 
 /*# sourceMappingURL=styles.css.map */
