--- a/sass/layout/navbar.scss
+++ b/sass/layout/navbar.scss
@@ -34,7 +34,7 @@ h2 {
 
 .btn-nav {
 	padding: 10px 20px;
-	background-color: var(--color-prymary);
+	background-color: pink;
 	border: none;
 	border-radius: 10px;
 	margin-top: 15px;
