--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,4 +1,9 @@
-@import "components/search.scss";
+// components
 
+@import "components/search.scss";
+@import "components/new-coctel.scss";
+@import "components/spiner.scss";
+
+// layout
 @import "layout/navbar.scss";
 @import "layout/mainContainer.scss";
